k8s/manifests/localstack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
  namespace: bp-bedrock
  labels:
    app: localstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
        - name: localstack
          image: localstack/localstack:3.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4566
              name: edge
