k8s/manifests/localstack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localstack
  namespace: bp-bedrock
  labels:
    app: localstack
spec:
  type: ClusterIP
  selector:
    app: localstack
  ports:
    - name: edge
      port: 4566
      targetPort: 4566
