k8s/manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
  namespace: bp-bedrock
  labels:
    app: nginx-proxy
spec:
  type: LoadBalancer      # change to NodePort if you don't have a LB in your cluster
  selector:
    app: nginx-proxy
  ports:
    - name: http
      port: 80
      targetPort: 80
